# bridge-common

./: Cargo.toml
db/migrations/: 20240312221351_add_model_full_name_to_chats.up.sql
src/: database.rs  errors.rs  lib.rs
src/clients/: mod.rs  openai.rs
src/clients/bridge/: agents.rs  chats.rs  client.rs  mod.rs  models.rs
src/components/: chat_message.rs  mod.rs
src/repo/: messages.rs
src/tools/: mod.rs
src/types/: abilities.rs  agents.rs  chats.rs  messages.rs  models.rs  pages.rs  task_results.rs  tasks.rs
